@@ -1,3 +1,7 @@
+1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* acinline.m4: New file.
+
 1998-07-18  Alex Lancaster  <alex@santafe.edu>
 
 	* acffi.m4: Make FFI{LIBS, LDFLAGS} variables use curly-braces rather
